[package]
name = "random-background"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
rand_core = "0.6.4"
rand_distr = "0.4.3"
shellexpand = "3.1.0"
